changed a bit more

--- a/_posts/2019-04-21-Idea00.markdown
+++ b/_posts/2019-04-21-Idea00.markdown
@@ -29,11 +29,13 @@ You'll see what I mean…
 
 ##Introduction
 ###Background,need
-A large quantity of human activity is concerned with generating, developing and realising ideas for the collective benefit of our global community.  Academic, commercial and social frameworks exist to support these endeavours and, while these frameworks can facilitate tremendous progress, there are undoubtedly a lot of very good ideas which fall through the cracks or never see light of day at all. Perhaps they are not trendy enough to attract scientific funding, not immediately/obviously 
-Add some references in this section.
-profitable enough for business or the originators lack some combination of the time, complete expertise, formal credentials and resources to develop them in any meaningful way.  Furthermore, to be successfully channelled through such a supportive framework necessitates the shaping of any idea so that it conforms to its cradle, be that the cradle a research grant, profit focussed corporate R&D department, short-term impact conscious charity fund or default-fearing bank loan.  This system can readily kill, cripple or detrimentally dilute ideas which could serve the world in a useful way.  Ultimately this is a result for the needs of the overarching framework of capitalist markets and economic growth, the pros and cons of which are beyond the scope of this document, but certainly could do with a bit of a shake up in the eyes of many.
+<p style="color:red">Add some references in this section.</p>
+A large quantity of human activity is concerned with generating, developing and realising ideas for the collective benefit of our global community.  Academic, commercial and social frameworks exist to support these endeavours and, while these frameworks can facilitate tremendous progress, there are undoubtedly a lot of very good ideas which fall through the cracks or never see light of day at all. Perhaps they are not trendy enough to attract scientific funding, not immediately/obviously  profitable enough for business or the originators lack some combination of the time, complete expertise, formal credentials and resources to develop them in any meaningful way.  Furthermore, to be successfully channelled through such a supportive framework necessitates the shaping of any idea so that it conforms to its cradle, be that the cradle a research grant, profit focussed corporate R&D department, short-term impact conscious charity fund or default-fearing bank loan.  This system can readily kill, cripple or detrimentally dilute ideas which could serve the world in a useful way.  Ultimately this is a result for the needs of the overarching framework of capitalist markets and economic growth, the pros and cons of which are beyond the scope of this document, but certainly could do with a bit of a shake up in the eyes of many.
+
 Over the years, open source computer software has made an incredibly useful, albeit often underappreciated, contribution to society and the economy, and much of it has grown from disparate communities working on projects in their spare time with little or no remuneration.  Successful social and community movements have also operated in this way on a local scale for the full length of civilised human history.  It is a strange quirk of idea protectionism that places software within the system of copyright, a formal protection assigned automatically to the creator at the moment of creation, yet a practical technological invention must be patented through formal institutions, requiring considerable expense and thereby a conveying hefty advantage to established entities over those with little or no resource.  
+
 Seen through the competitive, capitalist lens, there are obvious reasons for the established framing of intellectual property, but from the perspective of general prosperity the system can seem rather stifling.  The promise of a technological monopoly does accelerate the progress of many useful technologies, but it can result in the exclusion of individuals based on their financial resources, attenuation of progress through the artificial bottlenecking of roll-out and, perhaps most troubling, the complete arresting of potential through the acquisition and immediate burying of competitive IP. Furthermore, on a wider societal level there are increasingly validated fears that, as this system permits the most powerful (richest) individuals and institutions to acquire larger and larger quantities of finite resource, we are heading towards a multitude of interconnected socioeconomic, climatic and cultural catastrophes on a global scale.
+
 It seems that some rebalancing may be required.  Where that balance lies is unclear but it is likely that presently we are very far from it.
 
 ###Proposal, vision
